added spring efect + updated about section

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Personal Site",
-  "name": "Personal Site - Jakob Görgen",
+  "short_name": "Jakob Goergen",
+  "name": "Jakob Goergen",
   "icons": [
     {
       "src": "favicon.ico",
