--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-scripts": "5.0.1",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4",
-    "@headlessui/react": "^1.7.3"
+    "@headlessui/react": "^1.7.3",
+    "@react-spring/web": "^9.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
